# mailtrap-rs

./: Cargo.toml  README.md
.github/workflows/: build.yml  publish.yml
src/: client.rs  lib.rs
src/resources/: email_with_text.rs  mod.rs
src/types/: email.rs  message_builder.rs  mod.rs  response.rs
