[package]
name = "mailtrap-rs"
version = "0.1.1"
edition = "2024"
description = "Unofficial Rust client for Mailtrap"
license = "Unlicense"
license-file = "LICENSE"
repository = "https://github.com/rgarbi/mailtrap-rs"

[dependencies]
mime = { version = "0.3.17"}
url = "2.5.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
reqwest = "0.12.15"
validator = "0.20.0"

[dev-dependencies]
base64 = "0.22.1"
claims = "0.8.0"
fake = "4.2.0"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.16.0", features = ["v4"] }
wiremock = "0.6.3"
