[package]
name = "mailtrap-rs"
version = "0.2.1"
edition = "2024"
description = "Unofficial Rust client for Mailtrap"
license = "Unlicense"
repository = "https://github.com/rgarbi/mailtrap-rs"

[dependencies]
mime = { version = "0.3.17"}
url = "2.5.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
reqwest = "0.13.4"
validator = "0.20.0"

[dev-dependencies]
base64 = "0.22.1"
claims = "0.8.0"
fake = "5.1.0"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.23.2", features = ["v4"] }
wiremock = "0.6.5"
